--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint --ext .tsx --ext .ts src/",
-    "lint:fix": "eslint --ext .tsx --ext .ts src/ --fix"
+    "lint:fix": "eslint --ext .tsx --ext .ts src/ --fix",
+    "generate": "graphql-codegen --config codegen.yml",
+    "generate:watch": "yarn generate --watch"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -48,6 +50,11 @@
     ]
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^1.17.8",
+    "@graphql-codegen/introspection": "^1.17.8",
+    "@graphql-codegen/typescript": "^1.17.9",
+    "@graphql-codegen/typescript-operations": "^1.17.8",
+    "@graphql-codegen/typescript-react-apollo": "^2.0.6",
     "@types/graphql": "^14.5.0",
     "apollo": "^2.30.3",
     "webpack-cli": "^3.3.12"
