Fix landing page + about page + register form

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
     "graphql": "^15.3.0",
+    "node-sass": "^4.14.1",
     "prettier": "^2.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -22,7 +23,7 @@
     "tslint-config-prettier": "^1.18.0",
     "tslint-react": "^5.0.0",
     "typescript": "~3.7.2",
-    "va-components": "^1.0.10"
+    "va-components": "^1.0.17"
   },
   "scripts": {
     "start": "react-scripts start",
