--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
+    "@types/yup": "^0.29.7",
     "formik": "^2.1.5",
     "graphql": "^15.3.0",
     "node-sass": "^4.14.1",
