--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
     "@types/yup": "^0.29.7",
+    "apollo-link-http": "^1.5.17",
     "formik": "^2.1.5",
     "graphql": "^15.3.0",
     "node-sass": "^4.14.1",
