--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
+    "@types/js-cookie": "^2.2.6",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
@@ -16,6 +17,7 @@
     "apollo-link-http": "^1.5.17",
     "formik": "^2.1.5",
     "graphql": "^15.3.0",
+    "js-cookie": "^2.2.1",
     "node-sass": "^4.14.1",
     "prettier": "^2.1.2",
     "react": "^16.13.1",
