--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/yup": "^0.29.7",
     "apollo-link-http": "^1.5.17",
+    "concurrently": "^5.3.0",
     "formik": "^2.1.5",
     "graphql": "^15.3.0",
     "js-cookie": "^2.2.1",
@@ -28,11 +29,11 @@
     "tslint-config-prettier": "^1.18.0",
     "tslint-react": "^5.0.0",
     "typescript": "~3.7.2",
-    "va-components": "^1.0.17",
+    "va-components": "^1.0.29",
     "yup": "^0.29.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"yarn generate --watch\" \"react-scripts start\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
