add currentUser context

--- a/codegen.yml
+++ b/codegen.yml
@@ -2,6 +2,8 @@ overwrite: true
 schema: http://127.0.0.1:8000/graphql
 documents:
   - 'src/pages/**/*.graphql'
+  - 'src/components/*.graphql'
+  - 'src/components/**/*.graphql'
 generates:
   src/graphql.ts:
     plugins:
