--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "tslint-config-prettier": "^1.18.0",
     "tslint-react": "^5.0.0",
     "typescript": "~3.7.2",
-    "va-components": "1.0.35",
+    "va-components": "^1.0.35",
     "yup": "^0.29.3"
   },
   "scripts": {
